--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -1,20 +1,8 @@
 body {
-  background-color: #333;
+  background-color: #ccc;
   background-image: none;
-}
-
-.page-header {
-  background: #555;
 }
 
 .page-header.sidemenu {
   background: none;
-}
-
-.page-header h1 a {
-  color:#FCFFF5;
-}
-
-#main-nav-container {
-  background:#555555
 }
