Added welcome message text to home page.

--- a/public/hobothemes/clean/stylesheets/clean.css
+++ b/public/hobothemes/clean/stylesheets/clean.css
@@ -300,7 +300,7 @@ div.select-many .item .remove-item { float: right; }
 /* you can delete them if you over-ride it             */
 
 .front-page .welcome-message {
-	padding: 10px 20px 20px; border: 1px solid #e8e8e8;
+	padding: 10px 0 20px; border: 1px solid #e8e8e8;
 	color: #222;
 	background: url(../images/50-ACD3E6-fff.png) repeat-x #fff;
 }
