[#37615045] small formatting changes Grade level and Subject Area
https://www.pivotaltracker.com/story/show/37615045

Grade level and subject should appear on the same line in the activities index view.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -130,6 +130,11 @@ a.button {
 	clear: both;
 	}
 
+.category_tag {
+	font-weight: bold;
+	margin-left: 1.5em;
+	/*margin-right: 1.5em;*/
+}
 .searchBox {
 	/*background-color: whiteSmoke;*/
 	border: 2px solid whiteSmoke;
