[#37881607] Vertical align the grade levels to the top
https://www.pivotaltracker.com/story/show/37881607

vertical-align: top;
http://screencast.com/t/YZodsejkRe

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -150,6 +150,7 @@ a.button {
 	margin-right: 1em;
 	margin-left: 1em;
 	padding: 0.5em;
+	vertical-align: top;
 	}
 	.searchBox h4 {
 		font-size: 12px;
