Adding fix for IE7 layout problem

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -80,6 +80,9 @@ a.button {
 	border: none;
 	color: #fff;
 	}
+.front-page .content {
+	min-height: 400px;
+	}
 .section, .front-page .welcome-message {
 	background: #fff !important;
 	border: none !important;
