--- a/public/hobothemes/clean/stylesheets/clean.css
+++ b/public/hobothemes/clean/stylesheets/clean.css
@@ -120,7 +120,7 @@ form .actions input { margin: 0; }
 .content-body {padding: 15px 0;}
 .content-footer {padding-bottom: 20px;}
 
-.page-header {margin-top: 25px; padding: 0 0 0;}
+.page-header {margin-top: 25px; padding: 0 0 0; position: relative;}
 .page-header h1 {
 	margin: 0; padding: 20px 30px 30px;
 	font-family: "Arial Black", Tahoma, Arial, sans-serif; font-size: 36px; letter-spacing: -1.5pt;
@@ -163,9 +163,11 @@ form .actions input { margin: 0; }
 }
 
 .account-nav {
-    float:right;
-    margin: -22px 5px 0 0;
+    margin: 0;
 	font-size: 11px;
+	position: absolute;
+	right: 5px;
+	top: -22px;
 }
 .account-nav li {
 	float: left;
