--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -5,7 +5,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite,
 del, dfn, font, img, ins, kbd, q, s, samp,
-small, strike, sub, sup, tt, var,
+small, strike, tt, var,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
