--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
+  <script>
+        tinymce.init({selector:'textarea'});
+  </script>
   <% # This file isn't used BTW, see hobo gem rapid tags for page %>
 </head>
 <body>
