Change positions of delete and save buttons when editing a page.
[#67753442]

https://www.pivotaltracker.com/story/show/67753442

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -268,3 +268,17 @@ a.button {
 		.checkList .checkItem {
 			margin: 0;
 		}
+
+.top-actions {
+  float: right;
+  margin-bottom: 12px;
+  clear: both;
+}
+.bottom-actions {
+  float: right;
+  margin-bottom: 12px;
+  clear: both;
+}
+#page_pane_ordering {
+  clear: both;
+}
